re PR c++/85258 (ICE with invalid range-based for-loop)

PR c++/85258
	* constexpr.c (reduced_constant_expression_p): Return false for null
	trees.

	* g++.dg/parse/error61.C: New test.

From-SVN: r259355